@@ -496,7 +496,7 @@ func TestHttpAgentCfgAsMapInterface(t *testing.T) {
 	{
 		"id": "conecto1",
 		"url": "/conecto",
-		"sessions_conns": ["*localhost"],
+		"sessions_conns": ["*localhost","*internal"],
 		"request_payload":	"*url",
 		"reply_payload":	"*xml",
 		"request_processors": [
@@ -528,7 +528,7 @@ func TestHttpAgentCfgAsMapInterface(t *testing.T) {
 		{
 			utils.IDCfg:             "conecto1",
 			utils.URLCfg:            "/conecto",
-			utils.SessionSConnsCfg:  []string{"*localhost"},
+			utils.SessionSConnsCfg:  []string{"*localhost", "*internal"},
 			utils.RequestPayloadCfg: "*url",
 			utils.ReplyPayloadCfg:   "*xml",
 			utils.RequestProcessorsCfg: []map[string]interface{}{
